# MinHS_Interpreter

./: README.md
 MinHs/minhs1/tests/task2/: 000.mhs  001.mhs  002.mhs  003.mhs  check.sh
 MinHs/minhs1/tests/task3/: 000.mhs
 Polymorphic_MinHs/minhs2/.stack-work/: stack.sqlite3
ass_1/minhs1.hsproj/: .uuid
ass_1/minhs1.hsproj/minhs1/: minhs1.cabal
ass_1/minhs1.hsproj/minhs1/MinHS/: Evaluator.hs
ass_1/minhs1/.stack-work/: stack.sqlite3
ass_1/minhs1/MinHS/: Evaluator.hs
ass_2/minhs2.hsproj/: .uuid
ass_2/minhs2.hsproj/minhs2/: minhs2.cabal
ass_2/minhs2.hsproj/minhs2/MinHS/: Syntax.hs  TCMonad.hs  TyInfer.hs
ass_2/minhs2/.stack-work/: stack.sqlite3
ass_2/minhs2/MinHS/: TyInfer.hs
