name: minhs1
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
maintainer: liamoc@cse.unsw.edu.au
synopsis: An interpreter for MinHS
category: Language
author: Liam O'Connor
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable minhs-1
    main-is: Main.hs
    build-depends:
        base -any,
        optparse-applicative -any,
        ansi-wl-pprint -any,
        containers -any,
        parsec -any
    default-language: Haskell2010
    other-modules:
        MinHS.Evaluator
        MinHS.Parse
        MinHS.Syntax
        MinHS.TypeChecker
        MinHS.Env
        MinHS.Pretty

